# getflooring

./: .env.example  .gitignore  .mcp.json  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: datasources.py  generation.py  router.py  templates.py
backend/app/connectors/: __init__.py  base.py  registry.py
backend/app/connectors/hubspot/: __init__.py  connector.py
backend/app/connectors/rest_api/: __init__.py  connector.py
backend/app/db/: supabase.py
backend/app/pdf/: engine.py
backend/app/schemas/: __init__.py
backend/app/templates/: compiler.py
backend/pdf_generator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/blocks/: ColumnBlock.tsx  Container.tsx  DividerBlock.tsx  ImageBlock.tsx  RowBlock.tsx  SpacerBlock.tsx  TableBlock.tsx  TextBlock.tsx  index.ts
frontend/src/components/editor/: Canvas.tsx  Editor.tsx  EditorContent.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/types/: template.ts
frontend/tests/: editor.spec.ts
